sandbox/output
GildedRoseTest.java:249: error: cannot find symbol
            .filter(GildedRose.isBackstagePasses())
                              ^
  symbol:   method isBackstagePasses()
  location: class GildedRose
1 error
